fix title spacing

--- a/style.css
+++ b/style.css
@@ -47,10 +47,10 @@ header {
     transform: skewX(-135deg);
 }
 .header-black {
-    right: -30vw;
+    right: calc(-30% + 100px);
 }
 .header-white {
-    right: 20vw;
+    right: calc(70% + 100px);
 }
 
 .header-title {
@@ -75,10 +75,10 @@ header {
     pointer-events: auto;
 }
 .button-container-black {
-    right: -40vw;
+    right: calc(-40% + 100px);
 }
 .button-container-white {
-    right: 10vw;
+    right: calc(60% + 100px);
 }
   
 .header-button {
@@ -162,6 +162,7 @@ header {
     transform: skewX(135deg);
     z-index: 10;
 }
+/* noclip is used so hover on button shows the full button instead of just the clipped side*/
 .noclip {
     pointer-events: none;
 }
@@ -174,7 +175,7 @@ header {
     right: 50%;
 }
 .clip-white {
-    width: 50%;
+    width: 100%;
     left: 50%;
 }
 
@@ -383,13 +384,19 @@ header {
     .header-title {
         font-size: 2em;
     }
-
-    .button-container-black {
-        right: -45vw;
+    .header-black {
+        right: -10%;
+    }
+    .header-white {
+        right: 90%;
     }
 
+    .button-container-black {
+        right: -183.75px;
+    }
     .button-container-white {
-        right: 5vw;
+        left: -183.75px;
+        right: unset;
     }
 }
 
@@ -411,45 +418,21 @@ header {
     .header-title {
         font-size: 1.5em;
     }
-
     .header-black {
-        right: -20vw;
+        right: 5%;
     }
-
     .header-white {
-        right: 30vw;
+        right: 105%;
     }
 
     .header-button {
         font-size: 1.2em;
     }
-}
-
-@media (max-width: 400px){
-    .header-title {
-        font-size: 1.3em;
-    }
-
-    .header-black {
-        right: -15vw;
-    }
-
-    .header-white {
-        right: 35vw;
-    }
-}
-
-@media (max-width: 350px){
-    .header-title {
-        font-size: 1.2em;
-    }
-
     .button-container-black {
-        right: -46vw;
+        right: -147.36px;
     }
-
     .button-container-white {
-        right: 4vw;
+        left: -147.36px;
     }
 }
 
